add the native image maven plugin at the pom level